fix(list): title and subtitle have text align left

--- a/packages/components/src/components/bal-list/bal-list.sass
+++ b/packages/components/src/components/bal-list/bal-list.sass
@@ -18,6 +18,10 @@
 .bal-list__item__content
   flex-direction: column
 
+.bal-list__item__title,
+.bal-list__item__subtitle
+  text-align: left
+
 .bal-list,
 .bal-list__item,
 .bal-list__item > div,
